# libblkmaker

./: .gitignore  .travis.yml  AUTHORS  COPYING  LICENSE  Makefile  Makefile.am  README  README.md  autogen.sh  base58.c  blkmaker.c  blkmaker.h  blkmaker_jansson.c  blkmaker_jansson.h  blktemplate.c  blktemplate.h  configure.ac  example.c  hex.c  libblkmaker_jansson.pc.in  private.h  test.c  test.sh  testinput.c
.github/workflows/: blank.yml  codacy.yml
